test/libsolidity/syntaxTests/constructor/two_constructors_new.sol
contract test {
	constructor(uint) public { }
	constructor() public {}
}
// ----
// DeclarationError: (47-70): More than one constructor defined.
